# wall-trade-backend

./: .env.example  .gitignore  .vercelignore  API_STRUCTURE.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_PLAN_architecture.md  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  cli.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_csapi_auth.py  test_csapi_endpoints.py  vercel.json  verify_app.py
.github/workflows/: ci.yml  deploy.yml
api/: index.py
app/: __init__.py  auth.py  constants.py  database.py  dependencies.py  main.py
app/ai/: analysis_pipeline.py  cache.py  parser.py  prompt_builder.py  streaming.py  validator.py
app/api/: __init__.py
app/auth/: __init__.py  dependencies.py  jwt.py  supabase_auth.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  config.py  exceptions.py  http.py  lifespan.py  logging.py  logging_config.py  memory_cache.py  middleware.py  security.py
app/database/: __init__.py  connection.py
app/middleware/: __init__.py  request_id.py  timing.py
app/models/: __init__.py  schemas.py
app/observability/: __init__.py  context.py  metrics.py  tracing.py
app/providers/: __init__.py
app/repositories/: __init__.py  alerts_repository.py  analysis_repository.py  base.py  macro_repository.py  market_feel_repository.py  narrative_repository.py  portfolio_repository.py  profile_repository.py  reports_repository.py  script_history_repository.py  (+4 more)
tests/: conftest.py  test_auth.py  test_config.py  test_main.py
(+125 files in other folders)
